--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "deploy": "npm run build && firebase deploy --only hosting:vite"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "firebaseui": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1"
   },
