--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
+    "swr": "^2.2.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
